ci: changed config for url

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,6 @@ description: »Data« is the backbone of every modern system. It can handicap or
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "/chirpy-blog"
 
 github:
   username: sneha-dq # change to your GitHub username
@@ -154,6 +153,7 @@ pwa:
 paginate: 10
 
 # The base URL of your site
+url: "https://sneha-dq.github.io"
 baseurl: "/chirpy-blog"
 
 # ------------ The following options are not recommended to be modified ------------------
