--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,11 +16,11 @@ jobs:
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.3'
+          ruby-version: '3.2'
 
       - name: Install dependencies
         run: |
-          gem install bundler
+          bundle config path vendor/bundle
           bundle install
 
       - name: Build site
