--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,9 @@
 # The Site Configuration
 
 # Import the theme
-theme: jekyll-theme-chirpy
-
+remote_theme: cotes2020/jekyll-theme-chirpy
 plugins:
-  - jekyll-theme-chirpy
-
+  - jekyll-remote-theme
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
 # otherwise, the layout language will use the default value of 'en'.
