ci: config file changes

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,12 @@
 # The Site Configuration
 
 # Import the theme
-remote_theme: cotes2020/jekyll-theme-chirpy
+theme: jekyll-theme-chirpy
 plugins:
-  - jekyll-remote-theme
+  - jekyll-theme-chirpy
+  - jekyll-paginate
+  - jekyll-seo-tag
+
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
 # otherwise, the layout language will use the default value of 'en'.
