ci: resolved css and tags error

--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ plugins:
 #  - jekyll-theme-chirpy
   - jekyll-paginate
   - jekyll-seo-tag
+  - jekyll-archives
 
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
@@ -200,6 +201,7 @@ defaults:
 
 sass:
   style: compressed
+#  sass_dir: assets/css
 
 compress_html:
   clippings: all
@@ -220,6 +222,7 @@ exclude:
   - purgecss.js
   - "*.config.js"
   - "package*.json"
+
 
 jekyll-archives:
   enabled: [categories, tags]
