--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -40,4 +40,5 @@ jobs:
           git add docs
           git commit -m "Deploy site to docs folder" || echo "No changes to commit"
           git push origin master
-
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
