--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -39,6 +39,5 @@ jobs:
           git config user.email "actions@github.com"
           git add docs
           git commit -m "Deploy site to docs folder" || echo "No changes to commit"
-          git push origin master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+#          git push origin master
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/sneha-dq/chirpy-blog.git master
