--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: The Data Conundrum! # the main title
+title: The Data Conundrum # the main title
 
 tagline: Chaos to Confidence | Engineering Trust in Data # it will display as the subtitle
 
