--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ title: The Data Conundrum # the main title
 
 tagline: Chaos to Confidence | Engineering Trust in Data # it will display as the subtitle
 
-description: »Data« is the backbone of every modern system. It can handicap or empower basis how you approach it. One wrong turn, can lead to a catastrophic end and a well-thought approach/strategy can make you a stalwart in your domain. This blog is bringing together the different pieces of this data puzzle to reap meaningful insights and decisions. # used by seo meta and the atom feed
+description: Data is the backbone of every modern system. It can handicap or empower basis how you approach it. One wrong turn, can lead to a catastrophic end and a well-thought approach/strategy can make you a stalwart in your domain. This blog is bringing together the different pieces of this data puzzle to reap meaningful insights and decisions. # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
