--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -1,9 +1,7 @@
 name: Build to docs folder for GitHub Pages
 
 on:
-  push:
-    branches:
-      - master
+  workflow_dispatch:
 
 permissions:
   contents: read
@@ -35,11 +33,11 @@ jobs:
         env:
           JEKYLL_ENV: production
 
-      - name: Commit and push docs folder
-        run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-          git add docs
-          git commit -m "Deploy site to docs folder" || echo "No changes to commit"
-          git push https://x-access-token:${{ secrets.CHIRPY_DEPLOY_TOKEN }}@github.com/sneha-dq/chirpy-blog.git master
+#      - name: Commit and push docs folder
+#        run: |
+#          git config user.name "GitHub Actions"
+#          git config user.email "actions@github.com"
+#          git add docs
+#          git commit -m "Deploy site to docs folder" || echo "No changes to commit"
+#          git push https://x-access-token:${{ secrets.CHIRPY_DEPLOY_TOKEN }}@github.com/sneha-dq/chirpy-blog.git master
 #         git push origin master
